--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,6 @@
             <a href="/">Contact</a>
         </nav>
     </footer>
-    <a target="_blank" href="http://hassansaeed.me"> &copy; Hassan Saeed</a>
+    <a target="_blank" href="http://hassansaeed.me"> &copy; Created by Hassan Saeed</a>
 </body>
 </html>
