--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,10 @@
     <section class="min-h-1/2 bg-mid flex flex-col gap-y-4 justify-center items-center text-white">
 
         <h4 class="text-3xl text-accent my-10">Subheading</h4>
-        <div class="flex flex-col md:flex-row gap-x-10">
-        <p class="w-1/2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
-        <p class="w-1/2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
-        <p class="w-1/2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
+        <div class="flex flex-col md:flex-row gap-x-10 m-auto mb-10">
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
  
         </div>
  
