--- a/src/index.html
+++ b/src/index.html
@@ -88,9 +88,9 @@
 
         <h4 class="text-3xl text-accent my-10">Subheading</h4>
         <div class="flex flex-col md:flex-row gap-x-10 m-auto mb-10">
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
  
         </div>
  
