--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,10 @@
     <section class="min-h-1/2 bg-mid flex flex-col gap-y-4 justify-center items-center text-white">
 
         <h4 class="text-3xl text-accent my-10">Subheading</h4>
-        <div class="flex flex-col md:flex-row gap-x-10 m-auto mb-10">
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
-        <p class="w-1/2 mb-10 md:w-3/12 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <div class="flex flex-col justify-evenly gap-x-10 ml-10 mr-10 mb-10">
+        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
  
         </div>
  
