--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <header class="flex flex-row justify-evenly w-full py-3 bg-light">
         <a class="w-10 cursor-pointer"><img src="/src/logo.svg"></a>
         <nav class="flex flex-row items-center gap-x-4">
-            <a href="/" class="hover:text-accent">Home</a>
-            <a href="/" class="hover:text-accent">Shop</a>
-            <a href="/" class="hover:text-accent">Community</a>
-            <a href="/" class="hover:text-accent">FAQ</a>
-            <a href="/" class="hover:text-accent">Contact</a>
+            <a href="#" class="hover:text-accent">Home</a>
+            <a href="#" class="hover:text-accent">Shop</a>
+            <a href="#" class="hover:text-accent">Community</a>
+            <a href="#" class="hover:text-accent">FAQ</a>
+            <a href="https://hassansaeed.me" target="_blank" class="hover:text-accent">Contact</a>
         </nav>
     </header>
     <main>
@@ -88,10 +88,10 @@
 
         <h4 class="text-3xl text-accent my-10">Subheading</h4>
         <div class="flex flex-col justify-evenly gap-x-10 ml-10 mr-10 mb-10">
-        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
-        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
-        <p class="p-3 bg-white rounded-lg text-black w-1/2 mb-10 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
- 
+        <p class="p-3 bg-white rounded-lg text-black mb-10 m-auto md:w-3/4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="p-3 bg-white rounded-lg text-black mb-10 m-auto md:w-3/4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+        <p class="p-3 bg-white rounded-lg text-black mb-10 m-auto md:w-3/4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero.</p>
+
         </div>
  
     </section>
@@ -99,16 +99,23 @@
 
 
     </main>
-    <footer class="flex justify-evenly items-center min-h-1/2 bg-dark text-white">
+    <footer class="flex justify-evenly items-center min-h-1/2 bg-dark text-white w-auto flex-col md:flex-row">
         <a class="w-10 cursor-pointer"><img src="/src/logo.svg"></a>
-        <nav class="flex flex-col gap-x-4">
+        <nav class="flex flex-col w-1/12 md:gap-x-4 md:w-fit">
             <a href="/">Home</a>
             <a href="/">Shop</a>
+            <a href="/">About</a>
+            <a href="/">Account</a>
+            <a href="https://hassansaeed.me" target="_blank">Contact</a>
+        </nav>
+        <nav class="flex flex-col w-1/12 md:gap-x-4 md:w-fit">
+            <a href="/">Financing</a>
+            <a href="/">Careers</a>
             <a href="/">Community</a>
             <a href="/">FAQ</a>
-            <a href="/">Contact</a>
+
         </nav>
     </footer>
-    <a target="_blank" href="http://hassansaeed.me"> &copy; Created by Hassan Saeed</a>
+   
 </body>
 </html>
