--- a/src/index.html
+++ b/src/index.html
@@ -77,10 +77,44 @@
         </div>
     </section>
 
+
+
+   
+
     <section class="min-h-1/2 bg-mid flex flex-col gap-y-4 justify-center items-center text-white">
 
         <h4 class="text-3xl text-accent my-10">Subheading</h4>
         <p class="w-9/12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore dolorem nihil quia reprehenderit vero inventore, ab iure maxime libero, ipsa, error rerum? Rerum voluptas, perferendis sed alias veritatis unde accusantium soluta, eveniet saepe iure incidunt aperiam quasi reiciendis at tempore provident, sequi quos eum eligendi ipsam est omnis! Ullam.</p>
+
+    </section>
+
+
+    <section>
+
+        <h4 class="text-3xl text-accent my-10 text-center">Subheading</h4>
+
+        <div class="min-h-1/2 flex gap-x-10 my-10 w-1/2 m-auto overflow-hidden">
+        <img src="1.svg"  alt="brand icon" class="w-20"/>
+        <img src="2.svg"  alt="brand icon" class="w-20"/>
+        <img src="3.svg"  alt="brand icon" class="w-20"/>
+        <img src="4.svg"  alt="brand icon" class="w-20"/>
+        <img src="5.svg"  alt="brand icon" class="w-20"/>
+        <img src="6.svg"  alt="brand icon" class="w-20"/>
+        <img src="7.svg"  alt="brand icon" class="w-20"/>
+        <img src="8.svg"  alt="brand icon" class="w-20"/>
+        <img src="9.svg"  alt="brand icon" class="w-20"/>
+        <img src="10.svg" alt="brand icon" class="w-20"/>
+        <img src="11.svg" alt="brand icon" class="w-20"/>
+        <img src="12.svg" alt="brand icon" class="w-20"/>
+        <img src="13.svg" alt="brand icon" class="w-20"/>
+        <img src="14.svg" alt="brand icon" class="w-20"/>
+        <img src="15.svg" alt="brand icon" class="w-20"/>
+        <img src="16.svg" alt="brand icon" class="w-20"/>
+        <img src="17.svg" alt="brand icon" class="w-20"/>
+        <img src="18.svg" alt="brand icon" class="w-20"/>
+        <img src="19.svg" alt="brand icon" class="w-20"/>
+        <img src="20.svg" alt="brand icon" class="w-20"/>
+        </div>
 
     </section>
 
