--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
         <h4 class="text-3xl text-accent my-10 text-center">Subheading</h4>
 
-        <div class="min-h-1/2 flex gap-x-10 my-10 w-1/2 m-auto overflow-hidden">
+        <div class="min-h-1/2 flex gap-x-10 my-10 w-1/2 m-auto overflow-hidden transition">
         <img src="1.svg"  alt="brand icon" class="w-20"/>
         <img src="2.svg"  alt="brand icon" class="w-20"/>
         <img src="3.svg"  alt="brand icon" class="w-20"/>
