--- a/src/index.html
+++ b/src/index.html
@@ -192,5 +192,6 @@
         <a href="/">FAQ</a>
       </nav>
     </footer>
+    <div class="">&copy; Created by Hassan Saeed</div>
   </body>
 </html>
