--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
             <img src="/src/analytics.svg" alt="icon" class="md:w-60 sm:my-3" />
           </div>
 
-          <p>
+          <p class="w-1/2">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
             libero.
           </p>
@@ -75,7 +75,7 @@
             <img src="/src/rocket.svg" alt="icon" class="md:w-60 sm:my-3" />
             <h4 class="font-bold mb-10">Increase Sales</h4>
           </div>
-          <p>
+          <p class="w-1/2">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
             libero.
           </p>
@@ -87,7 +87,7 @@
             <img src="/src/email.svg" alt="icon" class="md:w-60 sm:my-3" />
           </div>
 
-          <p>
+          <p class="w-1/2">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
             libero.
           </p>
@@ -101,7 +101,7 @@
             <h4 class="font-bold mb-10">24 Hour Support</h4>
           </div>
 
-          <p>
+          <p class="w-1/2">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
             libero.
           </p>
