--- a/src/index.html
+++ b/src/index.html
@@ -56,56 +56,54 @@
         />
         <h3 class="text-3xl text-accent my-10">Subheading</h3>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20">
-          <div class="flex flex-col justify-evenly items-center md:flex-row">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
+          <div class="flex flex-col justify-evenly items-center">
             <h4 class="font-bold mb-10">Forecast Growth</h4>
-            <img src="/src/analytics.svg" alt="icon" class="md:w-60 sm:my-3" />
+            <p class="md:w-1/2">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
+              libero.
+            </p>
           </div>
-
-          <p class="w-1/2">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
-            libero.
-          </p>
+          <img src="/src/analytics.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
           <div
-            class="flex flex-col-reverse justify-evenly items-center md:flex-row"
+            class="flex flex-col justify-evenly items-center"
           >
-            <img src="/src/rocket.svg" alt="icon" class="md:w-60 sm:my-3" />
             <h4 class="font-bold mb-10">Increase Sales</h4>
+            <p class="md:w-1/2">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
+              libero.
+            </p>
           </div>
-          <p class="w-1/2">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
-            libero.
-          </p>
+          <img src="/src/rocket.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20">
-          <div class="flex flex-col justify-evenly items-center md:flex-row">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
+          <div class="flex flex-col justify-evenly items-center">
             <h4 class="font-bold mb-10">Email Templates</h4>
-            <img src="/src/email.svg" alt="icon" class="md:w-60 sm:my-3" />
+            <p class="md:w-1/2">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
+              libero.
+            </p>
           </div>
-
-          <p class="w-1/2">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
-            libero.
-          </p>
+          <img src="/src/email.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
           <div
-            class="flex flex-col-reverse justify-evenly items-center md:flex-row"
+            class="flex flex-col justify-evenly items-center"
           >
-            <img src="/src/cs.svg" alt="icon" class="md:w-60 sm:my-3" />
             <h4 class="font-bold mb-10">24 Hour Support</h4>
+            <p class="md:w-1/2">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
+              libero.
+            </p>
           </div>
-
-          <p class="w-1/2">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
-            libero.
-          </p>
+          <img src="/src/cs.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
+        
       </section>
 
       <section
