--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,10 @@
         />
         <h3 class="text-3xl text-accent my-10">Subheading</h3>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
-          <div class="flex flex-col justify-evenly items-center">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly max-w-screen-md">
+          <div class="flex flex-col justify-evenly items-center md:w-1/2">
             <h4 class="font-bold mb-10">Forecast Growth</h4>
-            <p class="md:w-1/2">
+            <p class="lg:w-1/2">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
               libero.
             </p>
@@ -67,12 +67,12 @@
           <img src="/src/analytics.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly max-w-screen-md">
           <div
-            class="flex flex-col justify-evenly items-center"
+            class="flex flex-col justify-evenly items-center md:w-1/2"
           >
             <h4 class="font-bold mb-10">Increase Sales</h4>
-            <p class="md:w-1/2">
+            <p class="lg:w-1/2">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
               libero.
             </p>
@@ -80,10 +80,10 @@
           <img src="/src/rocket.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
-          <div class="flex flex-col justify-evenly items-center">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly max-w-screen-md">
+          <div class="flex flex-col justify-evenly items-center md:w-1/2">
             <h4 class="font-bold mb-10">Email Templates</h4>
-            <p class="md:w-1/2">
+            <p class="lg:w-1/2">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
               libero.
             </p>
@@ -91,19 +91,19 @@
           <img src="/src/email.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
 
-        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly">
+        <div class="shadow-xl w-3/6 rounded-lg w-8/12 p-20 md:flex md:items-center md: flex-row md:justify-evenly max-w-screen-md">
           <div
-            class="flex flex-col justify-evenly items-center"
+            class="flex flex-col justify-evenly items-center md:w-1/2"
           >
             <h4 class="font-bold mb-10">24 Hour Support</h4>
-            <p class="md:w-1/2">
+            <p class="lg:w-1/2">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
               libero.
             </p>
           </div>
           <img src="/src/cs.svg" alt="icon" class="md:w-60 sm:my-3" />
         </div>
-        
+
       </section>
 
       <section
@@ -121,10 +121,10 @@
       </section>
 
       <section>
-        <h4 class="text-3xl text-accent my-10 text-center">Subheading</h4>
-
+        <h4 class="text-3xl text-accent my-10 text-center">Top Companies Using BRAND</h4>
+<div class="flex items-center overflow-hidden min-h-1/3">
         <div
-          class="min-h-1/2 flex gap-x-10 my-10 w-1/2 m-auto overflow-hidden transition"
+          class="flex items-center gap-x-10 my-10 w-11/12 m-auto max-w-screen-lg animate-scroll"
         >
           <img src="1.svg" alt="brand icon" class="w-20" />
           <img src="2.svg" alt="brand icon" class="w-20" />
@@ -147,6 +147,7 @@
           <img src="19.svg" alt="brand icon" class="w-20" />
           <img src="20.svg" alt="brand icon" class="w-20" />
         </div>
+      </div>
       </section>
 
       <section
