--- a/src/index.html
+++ b/src/index.html
@@ -122,30 +122,30 @@
 
       <section>
         <h4 class="text-3xl text-accent my-10 text-center">Top Companies Using BRAND</h4>
-<div class="flex items-center overflow-hidden min-h-1/3">
+<div class="flex items-center overflow-hidden min-h-1/3 relative">
         <div
-          class="flex items-center gap-x-10 my-10 w-11/12 m-auto max-w-screen-lg animate-scroll"
+          class="flex items-center gap-x-10 my-10 w-300% m-auto max-w-screen-lg animate-scroll absolute"
         >
-          <img src="1.svg" alt="brand icon" class="w-20" />
-          <img src="2.svg" alt="brand icon" class="w-20" />
-          <img src="3.svg" alt="brand icon" class="w-20" />
-          <img src="4.svg" alt="brand icon" class="w-20" />
-          <img src="5.svg" alt="brand icon" class="w-20" />
-          <img src="6.svg" alt="brand icon" class="w-20" />
-          <img src="7.svg" alt="brand icon" class="w-20" />
-          <img src="8.svg" alt="brand icon" class="w-20" />
-          <img src="9.svg" alt="brand icon" class="w-20" />
-          <img src="10.svg" alt="brand icon" class="w-20" />
-          <img src="11.svg" alt="brand icon" class="w-20" />
-          <img src="12.svg" alt="brand icon" class="w-20" />
-          <img src="13.svg" alt="brand icon" class="w-20" />
-          <img src="14.svg" alt="brand icon" class="w-20" />
-          <img src="15.svg" alt="brand icon" class="w-20" />
-          <img src="16.svg" alt="brand icon" class="w-20" />
-          <img src="17.svg" alt="brand icon" class="w-20" />
-          <img src="18.svg" alt="brand icon" class="w-20" />
-          <img src="19.svg" alt="brand icon" class="w-20" />
-          <img src="20.svg" alt="brand icon" class="w-20" />
+          <img src="1.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="2.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="3.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="4.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="5.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="6.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="7.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="8.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="9.svg"  alt="brand icon" class="w-20 grayscale" />
+          <img src="10.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="11.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="12.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="13.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="14.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="15.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="16.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="17.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="18.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="19.svg" alt="brand icon" class="w-20 grayscale" />
+          <img src="20.svg" alt="brand icon" class="w-20 grayscale" />
         </div>
       </div>
       </section>
